tests/paczka1/fuzzy1/85462676.err
Error in line 7: NSDQKaSH A152 77,0
Error in line 8: fbQeD8mj7a A256 25,6
Error in line 20: lp1Aa S515 -1,1
Error in line 19: REvxO51D A152 83,6
Error in line 23: REvxO51D S515 62,6
Error in line 18: fbQeD8mj7a S515 73,7
